# static-dh-ecdh

./: Cargo.toml  Makefile
src/: lib.rs  rng.rs
src/dh/: dh.rs
src/ecdh/: affine_math.rs
