[package]
name = "static-dh-ecdh"
version = "0.1.1"
authors = ["Twitter: @npashi <nihal.pasham@gmail.com>"]
edition = "2018"
categories = ["cryptography", "no-std"]
description = "Pure Rust implementations of static Diffie-Hellman and elliptic curve Diffie-Hellman key-exchange."
documentation = "https://docs.rs/static-dh-ecdh"
homepage = "https://github.com/nihalpasham/static-dh-ecdh.git"
keywords = ["ecdh", "dh", "keyexchange", "crypto", "ecdsa"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nihalpasham/static-dh-ecdh.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = { version = "0.14", default-features = false}
elliptic-curve = {version = "0.8.4"}
p256 = {version = "0.7.1", default-features = false, features = ["ecdsa"]}
p384 = {version = "0.6.1", default-features = false, features = ["zeroize", "ecdsa"]}
sha2 = {version="0.9.2", default-features = false}
rand = {version = "0.8.5", default-features = false, features = ["small_rng"]}
rand_chacha = {version = "0.3.0", default-features = false}
num-traits = {version="0.2.14", default-features = false}
num-bigint-dig = {version = "0.6.1", default-features = false, features = ["rand", "u64_digit"]}
getrandom = { version = "0.2", features = ["custom"] }
lazy_static = { version = "1.4.0"}
spin = "0.9.3"

